fixed toggle dark mode button click on mobile view

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -36,14 +36,14 @@ body {
 }
 
 .container {
-	padding: 2rem;
-	margin-top: 8rem;
+	padding: 0 2rem 2rem;
+	margin-top: 10rem;
 	z-index: 10;
 	position: relative;
 
 	@include sm {
 		max-width: 1400px;
-		margin: 6rem auto;
+		margin: 8rem auto;
 	}
 }
 
